--- a/introjavase/nbproject/project.properties
+++ b/introjavase/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=introjavase
-main.class=
+main.class=javase.chapter1.variables.variables02
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
